# purple-guardian-playwright

./: README.md  project.md
.github/workflows/: playwright.yml
purple-guardian-playwright/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
purple-guardian-playwright/examples/: basic_example.py
purple-guardian-playwright/src/purple_guardian/: __init__.py  config.py  core.py  detectors.py  monitors.py  strategies.py  workflows.py
purple-guardian-playwright/tests/: test_core.py
tests/: test_smoke.py
