[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "purple-guardian-playwright"
version = "0.1.0"
description = "💜 Zero-tolerance automation framework with Playwright"
authors = [{name = "Yohxande", email = "your-email@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Playwright",
]
dependencies = [
    "playwright>=1.40.0",
    "typing-extensions>=4.0.0",
    "pydantic>=2.0.0",
    "colorama>=0.4.6",
    "rich>=13.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0"
]

[project.urls]
Homepage = "https://github.com/yohxande/purple-guardian-playwright"
Documentation = "https://github.com/yohxande/purple-guardian-playwright/docs"
Repository = "https://github.com/yohxande/purple-guardian-playwright.git"